[gd_scene load_steps=52 format=2]

[ext_resource path="res://yuki_ice_3.png" type="Texture" id=1]
[ext_resource path="res://yuki_ice_2.png" type="Texture" id=2]
[ext_resource path="res://yuki_ice_4.png" type="Texture" id=3]
[ext_resource path="res://yuki_ice_5.png" type="Texture" id=4]
[ext_resource path="res://Arena.gd" type="Script" id=5]
[ext_resource path="res://yuki_hit_3.png" type="Texture" id=6]
[ext_resource path="res://trap_dodge_7.png" type="Texture" id=7]
[ext_resource path="res://yuki_ice_6.png" type="Texture" id=8]
[ext_resource path="res://ice_spikes.png" type="Texture" id=9]
[ext_resource path="res://Yuki.gd" type="Script" id=10]
[ext_resource path="res://yuki_heal_7.png" type="Texture" id=11]
[ext_resource path="res://yuki_hit_4.png" type="Texture" id=12]
[ext_resource path="res://trap_dodge_9.png" type="Texture" id=13]
[ext_resource path="res://trap_dodge_5.png" type="Texture" id=14]
[ext_resource path="res://trap_dodge_8.png" type="Texture" id=15]
[ext_resource path="res://yuki_heal_2.png" type="Texture" id=16]
[ext_resource path="res://yuki_heal_9.png" type="Texture" id=17]
[ext_resource path="res://yuki_hit_1.png" type="Texture" id=18]
[ext_resource path="res://yuki_heal_6.png" type="Texture" id=19]
[ext_resource path="res://yuki_heal_4.png" type="Texture" id=20]
[ext_resource path="res://Beats.tscn" type="PackedScene" id=21]
[ext_resource path="res://Ji.tscn" type="PackedScene" id=22]
[ext_resource path="res://Audio.tscn" type="PackedScene" id=23]
[ext_resource path="res://Health.tscn" type="PackedScene" id=24]
[ext_resource path="res://yuki_stand_2.png" type="Texture" id=25]
[ext_resource path="res://Soul.tscn" type="PackedScene" id=26]
[ext_resource path="res://yuki_heal_3.png" type="Texture" id=27]
[ext_resource path="res://yuki_heal_5.png" type="Texture" id=28]
[ext_resource path="res://yuki_attack_3.png" type="Texture" id=29]
[ext_resource path="res://trap_dodge_2.png" type="Texture" id=30]
[ext_resource path="res://yuki_heal_8.png" type="Texture" id=31]
[ext_resource path="res://yuki_attack_1.png" type="Texture" id=32]
[ext_resource path="res://trap_dodge_3.png" type="Texture" id=33]
[ext_resource path="res://yuki_ice_1.png" type="Texture" id=34]
[ext_resource path="res://yuki_attack_2.png" type="Texture" id=35]
[ext_resource path="res://trap_dodge_1.png" type="Texture" id=36]
[ext_resource path="res://IceSpikes.tscn" type="PackedScene" id=37]
[ext_resource path="res://yuki_hit_2.png" type="Texture" id=38]
[ext_resource path="res://yuki_heal_1.png" type="Texture" id=39]
[ext_resource path="res://trap_dodge_6.png" type="Texture" id=40]
[ext_resource path="res://yuki_attack_4.png" type="Texture" id=41]
[ext_resource path="res://yuki_stand_1.png" type="Texture" id=42]
[ext_resource path="res://trap_dodge_4.png" type="Texture" id=43]
[ext_resource path="res://yuki_hit_9.png" type="Texture" id=44]
[ext_resource path="res://yuki_hit_7.png" type="Texture" id=45]
[ext_resource path="res://yuki_hit_6.png" type="Texture" id=46]
[ext_resource path="res://yuki_hit_5.png" type="Texture" id=47]
[ext_resource path="res://yuki_hit_8.png" type="Texture" id=48]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 450, 450 )

[sub_resource type="CircleShape2D" id=5]
radius = 26.3059

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 32 ), ExtResource( 35 ), ExtResource( 29 ), ExtResource( 41 ) ],
"loop": false,
"name": "attack",
"speed": 7.24
}, {
"frames": [ ExtResource( 42 ), ExtResource( 25 ) ],
"loop": true,
"name": "default",
"speed": 3.67
}, {
"frames": [ ExtResource( 36 ), ExtResource( 30 ), ExtResource( 33 ), ExtResource( 43 ), ExtResource( 14 ), ExtResource( 40 ), ExtResource( 7 ), ExtResource( 15 ), ExtResource( 13 ) ],
"loop": false,
"name": "dodge",
"speed": 60.0
}, {
"frames": [ ExtResource( 39 ), ExtResource( 16 ), ExtResource( 27 ), ExtResource( 20 ), ExtResource( 28 ), ExtResource( 19 ), ExtResource( 11 ), ExtResource( 31 ), ExtResource( 17 ) ],
"loop": true,
"name": "heal",
"speed": 30.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 38 ), ExtResource( 6 ), ExtResource( 12 ), ExtResource( 47 ), ExtResource( 46 ), ExtResource( 45 ), ExtResource( 48 ), ExtResource( 44 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 8 ) ],
"loop": false,
"name": "ice",
"speed": 15.0
} ]

[node name="Arena" type="Area2D"]
position = Vector2( 450, 438 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 25, 25 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 9 )

[node name="Ji" parent="." instance=ExtResource( 22 )]
position = Vector2( -350, -550 )

[node name="Soul" parent="." instance=ExtResource( 26 )]
position = Vector2( 250, -425 )

[node name="Yuki" type="Area2D" parent="."]
position = Vector2( 470, 0 )
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Yuki"]
position = Vector2( 1, -1 )
shape = SubResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Yuki"]
scale = Vector2( 1.1, 1.1 )
frames = SubResource( 7 )
animation = "ice"
frame = 5
playing = true

[node name="Beats" parent="." instance=ExtResource( 21 )]

[node name="AudioStreamPlayer2D" parent="." instance=ExtResource( 23 )]
position = Vector2( -551, -536 )

[node name="Health" parent="." instance=ExtResource( 24 )]
position = Vector2( 400, -415 )

[node name="IceSpikes" parent="." instance=ExtResource( 37 )]
position = Vector2( -450, -438 )

[node name="IceSpikes47" parent="." instance=ExtResource( 37 )]
position = Vector2( -406, -433 )
rotation = 2.8414

[node name="IceSpikes5" parent="." instance=ExtResource( 37 )]
position = Vector2( -450, -275 )

[node name="IceSpikes7" parent="." instance=ExtResource( 37 )]
position = Vector2( -450, -193 )

[node name="IceSpikes9" parent="." instance=ExtResource( 37 )]
position = Vector2( -450, -113 )

[node name="IceSpikes11" parent="." instance=ExtResource( 37 )]
position = Vector2( -451, -33 )

[node name="IceSpikes13" parent="." instance=ExtResource( 37 )]
position = Vector2( -452, 44 )

[node name="IceSpikes15" parent="." instance=ExtResource( 37 )]
position = Vector2( -451, 124 )

[node name="IceSpikes17" parent="." instance=ExtResource( 37 )]
position = Vector2( -451, 205 )

[node name="IceSpikes19" parent="." instance=ExtResource( 37 )]
position = Vector2( -451, 288 )

[node name="IceSpikes21" parent="." instance=ExtResource( 37 )]
position = Vector2( -451, 370 )

[node name="IceSpikes23" parent="." instance=ExtResource( 37 )]
position = Vector2( -450, 451 )

[node name="IceSpikes6" parent="." instance=ExtResource( 37 )]
position = Vector2( -444, -233 )
rotation = -2.8414

[node name="IceSpikes8" parent="." instance=ExtResource( 37 )]
position = Vector2( -444, -153 )
rotation = -2.8414

[node name="IceSpikes10" parent="." instance=ExtResource( 37 )]
position = Vector2( -443, -72 )
rotation = -2.8414

[node name="IceSpikes12" parent="." instance=ExtResource( 37 )]
position = Vector2( -444, 7 )
rotation = -2.8414

[node name="IceSpikes14" parent="." instance=ExtResource( 37 )]
position = Vector2( -445, 85 )
rotation = -2.8414

[node name="IceSpikes16" parent="." instance=ExtResource( 37 )]
position = Vector2( -445, 166 )
rotation = -2.8414

[node name="IceSpikes18" parent="." instance=ExtResource( 37 )]
position = Vector2( -445, 248 )
rotation = -2.8414

[node name="IceSpikes20" parent="." instance=ExtResource( 37 )]
position = Vector2( -445, 330 )
rotation = -2.8414

[node name="IceSpikes22" parent="." instance=ExtResource( 37 )]
position = Vector2( -444, 411 )
rotation = -2.8414

[node name="IceSpikes4" parent="." instance=ExtResource( 37 )]
position = Vector2( -445, -315 )
rotation = -2.8414

[node name="IceSpikes3" parent="." instance=ExtResource( 37 )]
position = Vector2( -450, -355 )

[node name="IceSpikes2" parent="." instance=ExtResource( 37 )]
position = Vector2( -445, -396 )
rotation = -2.8414

[node name="IceSpikes24" parent="." instance=ExtResource( 37 )]
position = Vector2( 450, -439 )

[node name="IceSpikes25" parent="." instance=ExtResource( 37 )]
position = Vector2( 450, -276 )

[node name="IceSpikes26" parent="." instance=ExtResource( 37 )]
position = Vector2( 450, -194 )

[node name="IceSpikes27" parent="." instance=ExtResource( 37 )]
position = Vector2( 450, -114 )

[node name="IceSpikes28" parent="." instance=ExtResource( 37 )]
position = Vector2( 449, -34 )

[node name="IceSpikes29" parent="." instance=ExtResource( 37 )]
position = Vector2( 448, 43 )

[node name="IceSpikes30" parent="." instance=ExtResource( 37 )]
position = Vector2( 449, 123 )

[node name="IceSpikes31" parent="." instance=ExtResource( 37 )]
position = Vector2( 449, 204 )

[node name="IceSpikes32" parent="." instance=ExtResource( 37 )]
position = Vector2( 449, 287 )

[node name="IceSpikes33" parent="." instance=ExtResource( 37 )]
position = Vector2( 449, 369 )

[node name="IceSpikes34" parent="." instance=ExtResource( 37 )]
position = Vector2( 450, 450 )

[node name="IceSpikes35" parent="." instance=ExtResource( 37 )]
position = Vector2( 456, -234 )
rotation = -2.8414

[node name="IceSpikes36" parent="." instance=ExtResource( 37 )]
position = Vector2( 456, -154 )
rotation = -2.8414

[node name="IceSpikes37" parent="." instance=ExtResource( 37 )]
position = Vector2( 457, -73 )
rotation = -2.8414

[node name="IceSpikes38" parent="." instance=ExtResource( 37 )]
position = Vector2( 456, 6 )
rotation = -2.8414

[node name="IceSpikes39" parent="." instance=ExtResource( 37 )]
position = Vector2( 455, 84 )
rotation = -2.8414

[node name="IceSpikes40" parent="." instance=ExtResource( 37 )]
position = Vector2( 455, 165 )
rotation = -2.8414

[node name="IceSpikes41" parent="." instance=ExtResource( 37 )]
position = Vector2( 455, 247 )
rotation = -2.8414

[node name="IceSpikes42" parent="." instance=ExtResource( 37 )]
position = Vector2( 455, 329 )
rotation = -2.8414

[node name="IceSpikes43" parent="." instance=ExtResource( 37 )]
position = Vector2( 456, 410 )
rotation = -2.8414

[node name="IceSpikes44" parent="." instance=ExtResource( 37 )]
position = Vector2( 455, -316 )
rotation = -2.8414

[node name="IceSpikes45" parent="." instance=ExtResource( 37 )]
position = Vector2( 450, -356 )

[node name="IceSpikes46" parent="." instance=ExtResource( 37 )]
position = Vector2( 455, -397 )
rotation = -2.8414

[node name="IceSpikes48" parent="." instance=ExtResource( 37 )]
position = Vector2( -352, -438 )

[node name="IceSpikes49" parent="." instance=ExtResource( 37 )]
position = Vector2( -308, -433 )
rotation = 2.8414

[node name="IceSpikes50" parent="." instance=ExtResource( 37 )]
position = Vector2( -254, -438 )

[node name="IceSpikes51" parent="." instance=ExtResource( 37 )]
position = Vector2( -210, -433 )
rotation = 2.8414

[node name="IceSpikes52" parent="." instance=ExtResource( 37 )]
position = Vector2( -156, -438 )

[node name="IceSpikes53" parent="." instance=ExtResource( 37 )]
position = Vector2( -112, -433 )
rotation = 2.8414

[node name="IceSpikes54" parent="." instance=ExtResource( 37 )]
position = Vector2( -58, -438 )

[node name="IceSpikes55" parent="." instance=ExtResource( 37 )]
position = Vector2( -14, -433 )
rotation = 2.8414

[node name="IceSpikes56" parent="." instance=ExtResource( 37 )]
position = Vector2( 40, -438 )

[node name="IceSpikes57" parent="." instance=ExtResource( 37 )]
position = Vector2( 84, -433 )
rotation = 2.8414

[node name="IceSpikes58" parent="." instance=ExtResource( 37 )]
position = Vector2( 139, -438 )

[node name="IceSpikes59" parent="." instance=ExtResource( 37 )]
position = Vector2( 186, -433 )
rotation = 2.8414

[node name="IceSpikes60" parent="." instance=ExtResource( 37 )]
position = Vector2( 242, -438 )

[node name="IceSpikes63" parent="." instance=ExtResource( 37 )]
position = Vector2( 346, -438 )

[node name="IceSpikes61" parent="." instance=ExtResource( 37 )]
position = Vector2( 289, -433 )
rotation = 2.8414

[node name="IceSpikes64" parent="." instance=ExtResource( 37 )]
position = Vector2( 392, -433 )
rotation = 2.8414

[node name="IceSpikes62" parent="." instance=ExtResource( 37 )]
position = Vector2( -402, 465 )
rotation = 2.8414

[node name="IceSpikes65" parent="." instance=ExtResource( 37 )]
position = Vector2( -348, 460 )

[node name="IceSpikes66" parent="." instance=ExtResource( 37 )]
position = Vector2( -304, 465 )
rotation = 2.8414

[node name="IceSpikes67" parent="." instance=ExtResource( 37 )]
position = Vector2( -250, 460 )

[node name="IceSpikes68" parent="." instance=ExtResource( 37 )]
position = Vector2( -206, 465 )
rotation = 2.8414

[node name="IceSpikes69" parent="." instance=ExtResource( 37 )]
position = Vector2( -152, 460 )

[node name="IceSpikes70" parent="." instance=ExtResource( 37 )]
position = Vector2( -108, 465 )
rotation = 2.8414

[node name="IceSpikes71" parent="." instance=ExtResource( 37 )]
position = Vector2( -54, 460 )

[node name="IceSpikes72" parent="." instance=ExtResource( 37 )]
position = Vector2( -10, 465 )
rotation = 2.8414

[node name="IceSpikes73" parent="." instance=ExtResource( 37 )]
position = Vector2( 44, 460 )

[node name="IceSpikes74" parent="." instance=ExtResource( 37 )]
position = Vector2( 88, 465 )
rotation = 2.8414

[node name="IceSpikes75" parent="." instance=ExtResource( 37 )]
position = Vector2( 143, 460 )

[node name="IceSpikes76" parent="." instance=ExtResource( 37 )]
position = Vector2( 190, 465 )
rotation = 2.8414

[node name="IceSpikes77" parent="." instance=ExtResource( 37 )]
position = Vector2( 246, 460 )

[node name="IceSpikes78" parent="." instance=ExtResource( 37 )]
position = Vector2( 350, 460 )

[node name="IceSpikes79" parent="." instance=ExtResource( 37 )]
position = Vector2( 293, 465 )
rotation = 2.8414

[node name="IceSpikes80" parent="." instance=ExtResource( 37 )]
position = Vector2( 396, 465 )
rotation = 2.8414

[node name="IceSpikes81" parent="." instance=ExtResource( 37 )]
position = Vector2( -450, -438 )

[node name="IceSpikes82" parent="." instance=ExtResource( 37 )]
position = Vector2( -406, -433 )
rotation = 2.8414

[node name="IceSpikes83" parent="." instance=ExtResource( 37 )]
position = Vector2( -450, -275 )

[node name="IceSpikes84" parent="." instance=ExtResource( 37 )]
position = Vector2( -450, -193 )

[node name="IceSpikes85" parent="." instance=ExtResource( 37 )]
position = Vector2( -450, -113 )

[node name="IceSpikes86" parent="." instance=ExtResource( 37 )]
position = Vector2( -451, -33 )

[node name="IceSpikes87" parent="." instance=ExtResource( 37 )]
position = Vector2( -452, 44 )

[node name="IceSpikes88" parent="." instance=ExtResource( 37 )]
position = Vector2( -451, 124 )

[node name="IceSpikes89" parent="." instance=ExtResource( 37 )]
position = Vector2( -451, 205 )

[node name="IceSpikes90" parent="." instance=ExtResource( 37 )]
position = Vector2( -451, 288 )

[node name="IceSpikes91" parent="." instance=ExtResource( 37 )]
position = Vector2( -451, 370 )

[node name="IceSpikes92" parent="." instance=ExtResource( 37 )]
position = Vector2( -450, 451 )

[node name="IceSpikes93" parent="." instance=ExtResource( 37 )]
position = Vector2( -444, -233 )
rotation = -2.8414

[node name="IceSpikes94" parent="." instance=ExtResource( 37 )]
position = Vector2( -444, -153 )
rotation = -2.8414

[node name="IceSpikes95" parent="." instance=ExtResource( 37 )]
position = Vector2( -443, -72 )
rotation = -2.8414

[node name="IceSpikes96" parent="." instance=ExtResource( 37 )]
position = Vector2( -444, 7 )
rotation = -2.8414

[node name="IceSpikes97" parent="." instance=ExtResource( 37 )]
position = Vector2( -445, 85 )
rotation = -2.8414

[node name="IceSpikes98" parent="." instance=ExtResource( 37 )]
position = Vector2( -445, 166 )
rotation = -2.8414

[node name="IceSpikes99" parent="." instance=ExtResource( 37 )]
position = Vector2( -445, 248 )
rotation = -2.8414

[node name="IceSpikes100" parent="." instance=ExtResource( 37 )]
position = Vector2( -445, 330 )
rotation = -2.8414

[node name="IceSpikes101" parent="." instance=ExtResource( 37 )]
position = Vector2( -444, 411 )
rotation = -2.8414

[node name="IceSpikes102" parent="." instance=ExtResource( 37 )]
position = Vector2( -445, -315 )
rotation = -2.8414

[node name="IceSpikes103" parent="." instance=ExtResource( 37 )]
position = Vector2( -450, -355 )

[node name="IceSpikes104" parent="." instance=ExtResource( 37 )]
position = Vector2( -445, -396 )
rotation = -2.8414

[node name="IceSpikes105" parent="." instance=ExtResource( 37 )]
position = Vector2( 450, -439 )

[node name="IceSpikes106" parent="." instance=ExtResource( 37 )]
position = Vector2( 450, -276 )

[node name="IceSpikes107" parent="." instance=ExtResource( 37 )]
position = Vector2( 450, -194 )

[node name="IceSpikes108" parent="." instance=ExtResource( 37 )]
position = Vector2( 450, -114 )

[node name="IceSpikes109" parent="." instance=ExtResource( 37 )]
position = Vector2( 449, -34 )

[node name="IceSpikes110" parent="." instance=ExtResource( 37 )]
position = Vector2( 448, 43 )

[node name="IceSpikes111" parent="." instance=ExtResource( 37 )]
position = Vector2( 449, 123 )

[node name="IceSpikes112" parent="." instance=ExtResource( 37 )]
position = Vector2( 449, 204 )

[node name="IceSpikes113" parent="." instance=ExtResource( 37 )]
position = Vector2( 449, 287 )

[node name="IceSpikes114" parent="." instance=ExtResource( 37 )]
position = Vector2( 449, 369 )

[node name="IceSpikes115" parent="." instance=ExtResource( 37 )]
position = Vector2( 450, 450 )

[node name="IceSpikes116" parent="." instance=ExtResource( 37 )]
position = Vector2( 456, -234 )
rotation = -2.8414

[node name="IceSpikes117" parent="." instance=ExtResource( 37 )]
position = Vector2( 456, -154 )
rotation = -2.8414

[node name="IceSpikes118" parent="." instance=ExtResource( 37 )]
position = Vector2( 457, -73 )
rotation = -2.8414

[node name="IceSpikes119" parent="." instance=ExtResource( 37 )]
position = Vector2( 456, 6 )
rotation = -2.8414

[node name="IceSpikes120" parent="." instance=ExtResource( 37 )]
position = Vector2( 455, 84 )
rotation = -2.8414

[node name="IceSpikes121" parent="." instance=ExtResource( 37 )]
position = Vector2( 455, 165 )
rotation = -2.8414

[node name="IceSpikes122" parent="." instance=ExtResource( 37 )]
position = Vector2( 455, 247 )
rotation = -2.8414

[node name="IceSpikes123" parent="." instance=ExtResource( 37 )]
position = Vector2( 455, 329 )
rotation = -2.8414

[node name="IceSpikes124" parent="." instance=ExtResource( 37 )]
position = Vector2( 456, 410 )
rotation = -2.8414

[node name="IceSpikes125" parent="." instance=ExtResource( 37 )]
position = Vector2( 455, -316 )
rotation = -2.8414

[node name="IceSpikes126" parent="." instance=ExtResource( 37 )]
position = Vector2( 450, -356 )

[node name="IceSpikes127" parent="." instance=ExtResource( 37 )]
position = Vector2( 455, -397 )
rotation = -2.8414

[node name="IceSpikes128" parent="." instance=ExtResource( 37 )]
position = Vector2( -352, -438 )

[node name="IceSpikes129" parent="." instance=ExtResource( 37 )]
position = Vector2( -308, -433 )
rotation = 2.8414

[node name="IceSpikes130" parent="." instance=ExtResource( 37 )]
position = Vector2( -254, -438 )

[node name="IceSpikes131" parent="." instance=ExtResource( 37 )]
position = Vector2( -210, -433 )
rotation = 2.8414

[node name="IceSpikes132" parent="." instance=ExtResource( 37 )]
position = Vector2( -156, -438 )

[node name="IceSpikes133" parent="." instance=ExtResource( 37 )]
position = Vector2( -112, -433 )
rotation = 2.8414

[node name="IceSpikes134" parent="." instance=ExtResource( 37 )]
position = Vector2( -58, -438 )

[node name="IceSpikes135" parent="." instance=ExtResource( 37 )]
position = Vector2( -14, -433 )
rotation = 2.8414

[node name="IceSpikes136" parent="." instance=ExtResource( 37 )]
position = Vector2( 40, -438 )

[node name="IceSpikes137" parent="." instance=ExtResource( 37 )]
position = Vector2( 84, -433 )
rotation = 2.8414

[node name="IceSpikes138" parent="." instance=ExtResource( 37 )]
position = Vector2( 139, -438 )

[node name="IceSpikes139" parent="." instance=ExtResource( 37 )]
position = Vector2( 185, -436 )
rotation = 2.8414

[node name="IceSpikes140" parent="." instance=ExtResource( 37 )]
position = Vector2( 243, -439 )

[node name="IceSpikes141" parent="." instance=ExtResource( 37 )]
position = Vector2( 346, -438 )

[node name="IceSpikes142" parent="." instance=ExtResource( 37 )]
position = Vector2( 289, -433 )
rotation = 2.8414

[node name="IceSpikes143" parent="." instance=ExtResource( 37 )]
position = Vector2( 392, -433 )
rotation = 2.8414

[node name="IceSpikes144" parent="." instance=ExtResource( 37 )]
position = Vector2( -402, 465 )
rotation = 2.8414

[node name="IceSpikes145" parent="." instance=ExtResource( 37 )]
position = Vector2( -348, 460 )

[node name="IceSpikes146" parent="." instance=ExtResource( 37 )]
position = Vector2( -304, 465 )
rotation = 2.8414

[node name="IceSpikes147" parent="." instance=ExtResource( 37 )]
position = Vector2( -250, 460 )

[node name="IceSpikes148" parent="." instance=ExtResource( 37 )]
position = Vector2( -206, 465 )
rotation = 2.8414

[node name="IceSpikes149" parent="." instance=ExtResource( 37 )]
position = Vector2( -152, 460 )

[node name="IceSpikes150" parent="." instance=ExtResource( 37 )]
position = Vector2( -108, 465 )
rotation = 2.8414

[node name="IceSpikes151" parent="." instance=ExtResource( 37 )]
position = Vector2( -54, 460 )

[node name="IceSpikes152" parent="." instance=ExtResource( 37 )]
position = Vector2( -10, 465 )
rotation = 2.8414

[node name="IceSpikes153" parent="." instance=ExtResource( 37 )]
position = Vector2( 44, 460 )

[node name="IceSpikes154" parent="." instance=ExtResource( 37 )]
position = Vector2( 88, 465 )
rotation = 2.8414

[node name="IceSpikes155" parent="." instance=ExtResource( 37 )]
position = Vector2( 143, 460 )

[node name="IceSpikes156" parent="." instance=ExtResource( 37 )]
position = Vector2( 190, 465 )
rotation = 2.8414

[node name="IceSpikes157" parent="." instance=ExtResource( 37 )]
position = Vector2( 246, 460 )

[node name="IceSpikes158" parent="." instance=ExtResource( 37 )]
position = Vector2( 350, 460 )

[node name="IceSpikes159" parent="." instance=ExtResource( 37 )]
position = Vector2( 293, 465 )
rotation = 2.8414

[node name="IceSpikes160" parent="." instance=ExtResource( 37 )]
position = Vector2( 396, 465 )
rotation = 2.8414

[connection signal="child_entered_tree" from="Ji" to="." method="_on_Ji_child_entered_tree"]
[connection signal="ji_ready" from="Ji" to="Yuki" method="_on_Ji_ji_ready"]
[connection signal="ji_ready" from="Ji" to="AudioStreamPlayer2D" method="_on_Ji_ji_ready"]
[connection signal="player_hit" from="Ji" to="Health" method="_on_Ji_player_hit"]
[connection signal="ready_to_die" from="Ji" to="AudioStreamPlayer2D" method="_on_Ji_ready_to_die"]
[connection signal="soul_switch" from="Ji" to="Soul" method="_on_Ji_soul_switch"]
[connection signal="use_omni_gate" from="Ji" to="Yuki" method="_on_Ji_use_omni_gate"]
[connection signal="area_entered" from="Yuki" to="Yuki" method="_on_Yuki_area_entered"]
[connection signal="area_exited" from="Yuki" to="Yuki" method="_on_Yuki_area_exited"]
[connection signal="animation_finished" from="Yuki/AnimatedSprite" to="Yuki" method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Beats" to="Ji" method="_on_Beats_timeout"]
[connection signal="timeout" from="Beats" to="Yuki" method="_on_Beats_timeout"]
